[gd_scene load_steps=18 format=2]

[ext_resource path="res://Entity/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Portal.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Game_Over.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/MainLevel.gd" type="Script" id=5]
[ext_resource path="res://Resource/Ground Autotile.tres" type="TileSet" id=6]
[ext_resource path="res://Objects/Sprites/Coin.png" type="Texture" id=7]
[ext_resource path="res://Assets/PIXELADE.TTF" type="DynamicFontData" id=8]
[ext_resource path="res://Scenes/Paused_Menu.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Shop_Screen.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Merchant Head.png" type="Texture" id=12]
[ext_resource path="res://Assets/Portal.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=5]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 65
outline_size = 3
outline_color = Color( 0.286275, 0.105882, 0.105882, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 3
outline_color = Color( 0.286275, 0.105882, 0.105882, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 3
outline_color = Color( 0.286275, 0.105882, 0.105882, 1 )
font_data = ExtResource( 8 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 14.0
height = 18.0

[node name="MainLevel" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 4 )]
layer = -128

[node name="Terrain" type="TileMap" parent="."]
scale = Vector2( 0.25, 0.25 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 851967, 0, 0, 786432, 0, 1, 786433, 0, 2, 917503, 0, 65536, 851968, 0, 65537, 851969, 0, 65538, 983039, 0, 65536, 917504, 0, 65537, 917505, 0, 65538, 1048575, 0, 65536, 983040, 0, 65537, 983041, 0, 65538, 983059, 0, 0, 983060, 0, 2, 1114111, 0, 65536, 1048576, 0, 65537, 1048577, 0, 65538, 1048581, 0, 0, 1048582, 0, 2, 1048594, 0, 0, 1048595, 0, 4, 1048596, 0, 65538, 1179647, 0, 65536, 1114112, 0, 65537, 1114113, 0, 65538, 1114116, 0, 0, 1114117, 0, 4, 1114118, 0, 3, 1114119, 0, 2, 1114125, 0, 0, 1114126, 0, 2, 1114130, 0, 65536, 1114131, 0, 65537, 1114132, 0, 3, 1114133, 0, 2, 1245183, 0, 65536, 1179648, 0, 65537, 1179649, 0, 3, 1179650, 0, 1, 1179651, 0, 1, 1179652, 0, 4, 1179653, 0, 65537, 1179654, 0, 65537, 1179655, 0, 3, 1179656, 0, 1, 1179657, 0, 1, 1179658, 0, 1, 1179659, 0, 1, 1179660, 0, 1, 1179661, 0, 4, 1179662, 0, 3, 1179663, 0, 1, 1179664, 0, 1, 1179665, 0, 1, 1179666, 0, 4, 1179667, 0, 65537, 1179668, 0, 65537, 1179669, 0, 65538, 1310719, 0, 131072, 1245184, 0, 131073, 1245185, 0, 131073, 1245186, 0, 131073, 1245187, 0, 131073, 1245188, 0, 131073, 1245189, 0, 131073, 1245190, 0, 131073, 1245191, 0, 131073, 1245192, 0, 131073, 1245193, 0, 131073, 1245194, 0, 131073, 1245195, 0, 131073, 1245196, 0, 131073, 1245197, 0, 131073, 1245198, 0, 131073, 1245199, 0, 131073, 1245200, 0, 131073, 1245201, 0, 131073, 1245202, 0, 131073, 1245203, 0, 131073, 1245204, 0, 131073, 1245205, 0, 131074 )

[node name="Player" parent="." instance=ExtResource( 1 )]
pause_mode = 1
position = Vector2( 138, 476 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="MaxHp" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -840.0
margin_bottom = -595.0

[node name="CurrentHp" type="ColorRect" parent="UI/MaxHp"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
color = Color( 1, 0, 0, 1 )

[node name="HpLabel" type="RichTextLabel" parent="UI/MaxHp"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]0"
text = "0"

[node name="ScoreCounter" type="RichTextLabel" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 317.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -583.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[right]0 "
text = "0 "

[node name="CoinCounter" type="RichTextLabel" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.6
margin_top = 94.2
margin_right = -808.4
margin_bottom = -536.8
custom_fonts/normal_font = SubResource( 1 )
text = " 0"

[node name="Coin" type="Sprite" parent="UI"]
position = Vector2( 40.6, 113.2 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )

[node name="MerchantHeadCounter" type="RichTextLabel" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.6
margin_top = 146.2
margin_right = -805.4
margin_bottom = -484.8
custom_fonts/normal_font = SubResource( 3 )
text = " 0"

[node name="MerchantHead" type="Sprite" parent="UI"]
position = Vector2( 39.6, 162.2 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 12 )

[node name="Shop_Screen" parent="." instance=ExtResource( 11 )]
visible = false

[node name="Paused_Menu" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Portal" type="Area2D" parent="."]
position = Vector2( 1128, 509 )
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Portal"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal"]
shape = SubResource( 4 )

[node name="Game_Over" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="Portal" to="Portal" method="_on_Portal_body_entered"]
